AC_INIT([music_box], [0.1])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE
AC_PROG_CC

AC_SEARCH_LIBS(pow,m)
AC_SEARCH_LIBS(pthread_create,pthread)
AC_SEARCH_LIBS(dlopen,dl)
AC_SEARCH_LIBS(glBegin,GL)
AC_SEARCH_LIBS(glfwInit,glfw3)
AC_SEARCH_LIBS(glmc_vec4,cglm)
AC_SEARCH_LIBS(dtx_open_font,drawtext)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

